// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox ProductBox with 3 column 1`] = `
<div
  className="Product__ProductItem-s1fzb5ed-0 kAOMey"
>
  <picture
    className="SquareBox__BoxSquare-buzb9n-0 csFNBJ"
  >
    <div
      className="SquareBox__BoxSquareInner-buzb9n-1 dJxlZh"
    />
  </picture>
  <div
    className="Product__ProductTitle-s1fzb5ed-1 cuXePX"
  >
    Caixa de 40 Iscas com Ganchos de Pesca Venda Quente Agradável Pcs Durable Prático Moscas Artificiais Pena
  </div>
  <div
    className="Product__ProductPrice-s1fzb5ed-2 bRkSso"
  >
    <span
      className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
    >
      R$
    </span>
    <span
      className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
    >
      48,95
    </span>
  </div>
  <div
    className="Product__Status-s1fzb5ed-8 cGeqRU"
  />
  <div
    className="Product__ProductButtons-s1fzb5ed-5 jeLvUD"
  >
    <a
      className="Product__ProductBtnDetails-s1fzb5ed-6 gRlUCS"
      href="/product/iscas-de-pesca-caixa-de-40-iscas-com-ganchos-de-pesca-venda-quente-agradavel-pcs-durable"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
    <div
      className="Product__ProductBtnBuy-s1fzb5ed-7 gRhpcW"
    >
      <a
        className="btn btn-lg btn-primary btn-buy"
        href="http://s.click.aliexpress.com/deep_link.htm?dl_target_url=https%3A%2F%2Fpt.aliexpress.com%2Fitem%2FHot-Selling-Nice-Box-40Pcs-Durable-pesca-Feather-Practical-Artificial-Flies-Lures-With-Hooks%2F32858874542.html&aff_short_key=7iaYFMN"
      >
        Ir para loja
      </a>
    </div>
  </div>
</div>
`;

exports[`Test File ProductBox ProductBox with 4 column 1`] = `
<div
  className="Product__ProductItem-s1fzb5ed-0 gkCshv"
>
  <picture
    className="SquareBox__BoxSquare-buzb9n-0 csFNBJ"
  >
    <div
      className="SquareBox__BoxSquareInner-buzb9n-1 dJxlZh"
    />
  </picture>
  <div
    className="Product__ProductTitle-s1fzb5ed-1 cuXePX"
  >
    Caixa de 40 Iscas com Ganchos de Pesca Venda Quente Agradável Pcs Durable Prático Moscas Artificiais Pena
  </div>
  <div
    className="Product__ProductPrice-s1fzb5ed-2 bRkSso"
  >
    <span
      className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
    >
      R$
    </span>
    <span
      className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
    >
      48,95
    </span>
  </div>
  <div
    className="Product__Status-s1fzb5ed-8 cGeqRU"
  />
  <div
    className="Product__ProductButtons-s1fzb5ed-5 jeLvUD"
  >
    <a
      className="Product__ProductBtnDetails-s1fzb5ed-6 gRlUCS"
      href="/product/iscas-de-pesca-caixa-de-40-iscas-com-ganchos-de-pesca-venda-quente-agradavel-pcs-durable"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
    <div
      className="Product__ProductBtnBuy-s1fzb5ed-7 gRhpcW"
    >
      <a
        className="btn btn-lg btn-primary btn-buy"
        href="http://s.click.aliexpress.com/deep_link.htm?dl_target_url=https%3A%2F%2Fpt.aliexpress.com%2Fitem%2FHot-Selling-Nice-Box-40Pcs-Durable-pesca-Feather-Practical-Artificial-Flies-Lures-With-Hooks%2F32858874542.html&aff_short_key=7iaYFMN"
      >
        Ir para loja
      </a>
    </div>
  </div>
</div>
`;
